--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>Graphviz4S</name>
   <url>http://maven.apache.org</url>
-  <description>MXNet Scala Package</description>
+  <description>Graphviz Scala Package</description>
   <licenses>
     <license>
       <name>MIT License</name>
